Working on present

--- a/gerbenmarielenne/manifest.json
+++ b/gerbenmarielenne/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "TheShip",
+  "name": "Huwelijkscadeau Gerben Marielennne",
   "icons": [
     {
       "src": "favicon.ico",
